--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,35 +1,166 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <div class="container">
-        <h1>foo</h1>
-        <h2>foo</h2>
-        <h3>foo</h3>
-        <h4>foo</h4>
-        <h5>foo</h5>
-        <h6>foo</h6>
+    <div class="hero" style="height: 350px; background: white url(http://www.edition-open-sources.org/media/Studies/1/15/big2_2_Schemmel_imagesRicci-Schall-Verbiest.jpg) center center no-repeat; -webkit-background-size: 100%; -moz-background-size: 100%; background-size: 100%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; -webkit-background-size: cover; -moz-background-size: cover; background-size: cover;">
+        <h1>Jesuit Science Network</h1>
+    </div>
+    <div class="container container-narrow">
+
+        {#[- Beschreibung der geplanten Funktionalitäten#}
+        {#- Beschreibung von optionalen Funktionalitäten]#}
+        {#- Logos BUW, IZWT, BBAW, DFG#}
+
+        <h3 id="about">What is the Jesuit Science Network (JSN)?</h3>
+
+        <p>
+            The Jesuit Science Network is a biographical database on Jesuit scholars in the early modern sciences,
+            encompassing the period between the foundation of the Society of Jesus in 1540 and the first few decades
+            after the suppression of the order in 1773. After its scheduled launch in summer/fall 2016, it will be a
+            publicly available online tool that will not only allow the display of biographical data of more than 1000
+            Jesuit scholars in early modern sciences, but also offer complex searches into who was doing what, when, and
+            where.
+        </p>
+
+        <div class="cta">
+            <div class="well text-center">
+                <h4>Try out the JSN yourself</h4>
+                <a href="#" class="btn btn-primary">Try Advanced Search</a>
+                <a href="#" class="btn btn-primary">View Graphical Analysis</a>
+                <a href="{{ path('map') }}" class="btn btn-primary">Explore on Map</a>
+            </div>
+            <p class="small text-center">
+                or <a href="#">view sample database entry (Mister X, 1599-1624)</a>
+            </p>
+        </div>
+
+        <p>
+            The origins of the JSN lie in a research project that aimed to explore how mathematical knowledge in the
+            German- and French-speaking parts of Europe was put into writing and disseminated between 1650 and 1820,
+            focussing on involved authors and assuming a common Jesuit root. Judged by the sheer volume of Jesuit
+            writers and teachers of early modern mathematical sciences, it quickly became apparent, however, that this
+            Jesuit root needed to be treated separately and by itself, eventually growing into what is now called he
+            Jesuit Science Network.
+        </p>
     </div>
 
-    <footer>
-        <div class="container logos">
-            <div class="col-sm-12">
-                <ul class="list-inline">
-                    <li><a href="#"><img src="{{ asset('images/logos/buw.png') }}" height="30" /></a></li>
-                    <li><a href="#"><img src="{{ asset('images/logos/izwt.png') }}" height="30" /></a></li>
-                    <li><a href="#"><img src="{{ asset('images/logos/dfg.png') }}" height="30" /></a></li>
-                    <li><a href="#"><img src="{{ asset('images/logos/bbaw.png') }}" height="30" /></a></li>
-                </ul>
-            </div>
-        </div>
-        <div style="background-color: #f0f0f0;">
-            <div class="container">
-                <div class="col-sm-4"></div>
-                <div class="col-sm-4"></div>
-                <div class="col-sm-4">
-                    <h4>Contact</h4>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <div class="container container-narrow">
+        <h3 id="jesuit-science">Jesuit Early Modern Science</h3>
 
+        <p>
+            The key interest is in Jesuits active in early modern mathematical sciences. Building on already existing
+            research, the investigations for the JSN are based on Steven J. Harris' PhD thesis
+            &quot;<span class="reference" data-toggle="popover" data-html="true" data-trigger="hover"
+                        data-content="Harris, Steven (1988).&lt;br&gt;&lt;em&gt;Jesuit ideology &amp; Jesuit science: Scientific activity in the Society of Jesus, 1540-1773.&lt;/em&gt;&lt;br&gt;PhD thesis. University of Wisconsin-Madison.">Jesuit ideology &amp; Jesuit
+            science</span>&quot; from 1988.
+            Harris carried out statistical surveys of Jesuit 'scientific' teaching and publishing in the early modern
+            period, necessarily broadening a merely 'mathematical' focus towards one as extensive as possible in order
+            to accommodate the then not yet precisely defined understanding of what nowadays would be divided into
+            'mathematics' and 'natural sciences'. Harris' followup paper &quot;<span class="reference"
+                                                                                     data-toggle="popover"
+                                                                                     data-trigger="hover" data-html="true"
+                                                                                     data-content="Harris, Steven (1997).&lt;br&gt;&lt;em&gt;Les chaires de math&eacute;matiques.&lt;/em&gt;&lt;br&gt;In: Les J&eacute;suite &agrave; la Renaissance. Ed. by Luce Giard. Pairs: Presses Universitaires de France, pp. 239-261.">Les chaires de mathématiques</span>&quot;
+            from 1997 offers a precise list of the topics in consideration for his own work and
+            now also the JSN:
+        </p>
+
+        <dl class="dl-horizontal">
+            <dt>&quot;pure&quot; mathematics</dt>
+            <dd>algebra, functions, series; analytical geometry; arithmetic; integral calculus
+                and analysis; geometry; logarithms; number theory, probablitites, etc.</dd>
+
+            <dt>&quot;applied&quot; mathematics</dt>
+            <dd>mechanics; optics (catoptrics, dioptrics); acoustics (harmonies, theory of
+                music and sound); hydraulics, civil and military architecture; \enquote{mathematical geography}
+                (localization, cartography); scientific instruments, physics cabinet</dd>
+
+            <dt>astronomy</dt>
+            <dd>
+                calendars, almanachs, ephemerides; clocks (dials, horology); spherical astronomy; lunar and
+                solar astronomy (observation and theory); comets (observation and theory); stellar astronomy (observation);
+                planetary astronomy (theory)
+            </dd>
+
+            <dt>natural philosophy</dt>
+            <dd>
+                commentaries of Aristotle; natural philosophy; philosophy of experience; supernatural
+                and occult questions
+            </dd>
+
+            <dt>natural history</dt>
+            <dd>
+                cosmography; physical, \enquote{subterranean}, and politcal geography; hydrography;
+                meteorology (observation, instruments); zoology and botany; cabinets of curiosities, collections
+            </dd>
+
+            <dt>medicine</dt>
+            <dd>
+                health and disease; anatomy, physiology, surgery; experimental medicine
+            </dd>
+
+            <dt>agriculture and economics</dt>
+            <dd>
+                woods and horticulture; beekeeping; money, measure and weight
+            </dd>
+        </dl>
+    </div>
+
+    <div class="divider" style="background-image: url(http://www.edition-open-sources.org/media/Studies/1/15/big2_2_Schemmel_imagesRicci-Schall-Verbiest.jpg);"></div>
+
+    <div class="container container-narrow">
+        <h3 id="sources">Sources</h3>
+
+        <p>
+            The main source for the biographical data collected and presented in the JSN is the twelve-volume
+            &quot;Biblioth&egrave;que de la Compagnie de J&eacute;sus&quot;. Using Harris' list of topics considered
+            Jesuit science, one can
+            identify approximately 1000 names of interest in the Biblioth&egrave;que. Several other works, mostly with a
+            specific regional focus, provide further biographical details or even add people not covered by the
+            Biblioth&egrave;que.
+        </p>
+
+        <h4>Regionally overarching sources</h4>
+
+        <ul>
+            <li>Sommervogel, Carlos et al., eds. (Reprint 1960). Bibliothèque de la Compagnie de Jésus. Vol. I-XII.
+                Louvain: Éditions de la Bibliothèque S.J. : Collège Philosophique et Théologique.
+            </li>
+            <li>O'Neill, Charles et al., eds. (2011). Diccionario Histórico de la Compañía de Jesús. Vol. I-IV. Madrid:
+                Universidad Pontifica Comillas.
+            </li>
+        </ul>
+
+        <h4>Sources with a regional focus</h4>
+
+        <ul>
+            <li>Lisiak, Bogdan (2000). Jezuici polscy a nauki ścisłe od XVI do XIX wieku: słownik bio-bibliograficzny.
+                Kraków: Wyzsza Szkoła Filozoficzno-Pedagogiczna Ignatianum.
+            </li>
+
+            <li>Grzebień, Ludwik et al., eds.</li>
+
+            <li>Schuppener, Georg (1999)</li>
+            <li>-- (2002)</li>
+
+            <li>Reindl, Maria</li>
+
+            <li>Baldini, Ugo</li>
+
+            <li>Fischer, Karl</li>
+        </ul>
+
+
+        {#Aktueller Status der Datenbank: Sollte idealerweise dynamisch aus dem Repositorium abgelesen und direkt auf der#}
+        {#Seite, von der aus man die Suche startet, in Jesuiten und Nichtjesuiten aufgeteilt angezeigt werden; wird daher#}
+        {#hier nicht untergebracht. Sollte man hier auch die Anzahl der Aspekte und Referenzen anzeigen? Wäre eigentlich#}
+        {#nur Angeben... Aber sieht bestimmt nett aus ;) // Referenzen wären allerdings unsinnig, da insbesondere#}
+        {#VIAF/Wikipedia/spanisches Lexikon (?) zusammengefasst werden müssten, sonst skewed perception.#}
+
+    </div>
+
+{% endblock %}
+
+{% block javascripts %}
+    <script type="text/javascript">
+        $('.reference').popover();
+    </script>
 {% endblock %}
