--- a/app/Resources/css/fonts.css
+++ b/app/Resources/css/fonts.css
@@ -10,7 +10,6 @@
     url('/fonts/merriweather_light-webfont.svg#merriweather_lightregular') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
 
 @font-face {
@@ -23,7 +22,6 @@
     url('/fonts/merriweather-lightit-webfont.svg#merriweatherlight_italic') format('svg');
     font-weight: normal;
     font-style: italic;
-
 }
 
 @font-face {
@@ -36,5 +34,27 @@
     url('/fonts/montserrat-semibold-webfont.svg#montserratsemi_bold') format('svg');
     font-weight: 600;
     font-style: normal;
+}
 
+@font-face {
+    font-family: 'Montserrat';
+    src: url('/fonts/montserrat-regular-webfont.eot');
+    src: url('/fonts/montserrat-regular-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/fonts/montserrat-regular-webfont.woff2') format('woff2'),
+    url('/fonts/montserrat-regular-webfont.woff') format('woff'),
+    url('/fonts/montserrat-regular-webfont.ttf') format('truetype'),
+    url('/fonts/montserrat-regular-webfont.svg#montserratregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'MontserratJSN';
+    src: url('/fonts/montserrat-extrabold-webfont.eot');
+    src: url('/fonts/montserrat-extrabold-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/fonts/montserrat-extrabold-webfont.woff2') format('woff2'),
+    url('/fonts/montserrat-extrabold-webfont.woff') format('woff'),
+    url('/fonts/montserrat-extrabold-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: bold;
 }
