--- a/app/Resources/less/variables.less
+++ b/app/Resources/less/variables.less
@@ -863,6 +863,6 @@
 //** Page header border color
 @page-header-border-color:    @gray-lighter;
 //** Width of horizontal description list titles
-@dl-horizontal-offset:        @component-offset-horizontal;
+@dl-horizontal-offset:        220px;
 //** Horizontal line color.
 @hr-border:                   @gray-lighter;
