--- a/app/Resources/views/map/index.html.twig
+++ b/app/Resources/views/map/index.html.twig
@@ -2,6 +2,9 @@
 
 {% block content %}
 <div id="map"></div>
+    <div id="map-filters">
+        {{ form(form) }}
+    </div>
 {% endblock %}
 
 {% block stylesheets %}
@@ -11,12 +14,29 @@
             margin: 0;
             padding: 0;
         }
-        #top-shadow {
-            display: block;
-        }
         #map {
             height: 100%;
             margin-top: 50px;
+        }
+        #map-filters {
+            font-size: 75%;
+            position: absolute;
+            top: 65px;
+            right: 15px;
+            width: 300px;
+            height: 400px;
+            /*border: 1px solid #d8d8d8;*/
+            background: #fff;
+            padding: 10px;
+            -webkit-box-shadow: rgba(0, 0, 0, 0.3) 2px 2px 4px 4px;
+            -moz-box-shadow: rgba(0, 0, 0, 0.3) 2px 2px 4px 4px;
+            box-shadow: rgba(0, 0, 0, 0.3) 2px 2px 4px 4px;
+        }
+        #map-filters label.control-label {
+            font-family: 'Montserrat';
+            font-size: 11px;
+            text-transform: uppercase;
+            font-weight: normal;
         }
     </style>
 {% endblock %}
