Late Monday Fixes

--- a/app/Resources/views/default/search.html.twig
+++ b/app/Resources/views/default/search.html.twig
@@ -2,6 +2,8 @@
 
 {% block content %}
     <div class="container container-narrow topmargin">
+        {% include "flash.html.twig" %}
+
         <h2>Advanced Search</h2>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, architecto autem consequatur delectus eos excepturi inventore ipsa laboriosam libero modi nesciunt quidem rerum sequi similique voluptatibus? Consectetur fuga nisi quia.</p>
